[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/Illustration2.png" type="Texture" id=1]
[ext_resource path="res://scripts/stage.gd" type="Script" id=2]
[ext_resource path="res://scripts/ScrollingBackground.gd" type="Script" id=3]
[ext_resource path="res://scenes/Dragon.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Magic.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/Illustration3.png" type="Texture" id=7]
[ext_resource path="res://assets/Illustration8.png" type="Texture" id=8]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment(){
	vec2 shifeduv = UV;
	shifeduv.x += TIME * scroll_speed;
	vec4 col = texture(TEXTURE, shifeduv);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/scroll_speed = null

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.16, 0.61, 0.23, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.168627, 0.376471, 0.611765, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=10]
outline_size = 1
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="DynamicFont" id=9]
size = 32
outline_size = 1
outline_color = Color( 0.423529, 0.611765, 0.870588, 1 )
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 8 )
stretch_mode = 2
script = ExtResource( 3 )

[node name="Dragon" parent="." instance=ExtResource( 4 )]
position = Vector2( 848, 280 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 145, 297 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 24.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 40.0
percent_visible = false

[node name="ManaBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 24.0
margin_right = 248.0
margin_bottom = 40.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 40.0
percent_visible = false

[node name="ShieldSkillBg" type="TextureRect" parent="CanvasLayer"]
margin_left = 56.0
margin_top = 48.0
margin_right = 96.0
margin_bottom = 88.0
texture = ExtResource( 7 )

[node name="ShieldSkill" type="ProgressBar" parent="CanvasLayer/ShieldSkillBg"]
margin_left = 40.0
margin_right = 80.0
margin_bottom = 40.0
rect_rotation = 90.0
custom_styles/fg = SubResource( 11 )
custom_styles/bg = SubResource( 12 )
max_value = 20.0
value = 20.0
percent_visible = false

[node name="Label" type="Label" parent="CanvasLayer/ShieldSkillBg"]
margin_right = 40.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = " Q"
valign = 2

[node name="WaterBallSkillBg" type="TextureRect" parent="CanvasLayer"]
margin_left = 104.0
margin_top = 48.0
margin_right = 144.0
margin_bottom = 88.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="WaterBallSkill" type="ProgressBar" parent="CanvasLayer/WaterBallSkillBg"]
margin_left = 40.0
margin_right = 80.0
margin_bottom = 40.0
rect_rotation = 90.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 76.0
percent_visible = false

[node name="Label2" type="Label" parent="CanvasLayer/WaterBallSkillBg"]
margin_right = 40.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = " E"
valign = 2

[node name="ShieldBg" type="TextureRect" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 48.0
margin_right = 48.0
margin_bottom = 88.0
texture = ExtResource( 7 )

[node name="Shield" type="Label" parent="CanvasLayer/ShieldBg"]
margin_right = 40.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.619608, 0.666667, 0.933333, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1
valign = 1

[connection signal="send_global_pos" from="Player" to="Dragon" method="_on_Player_send_global_pos"]
[connection signal="skill_cd" from="Player" to="." method="_on_Player_skill_cd"]
[connection signal="stat_changed" from="Player" to="." method="_on_Player_stat_changed"]
